fix(button): update gap in size 4, text color in gray soft varaint (#493)
Small update for Tim
https://linear.app/whop/issue/PRO-42/update-button-and-icon-buttons

--- a/packages/frosted-ui/src/components/button/button.css
+++ b/packages/frosted-ui/src/components/button/button.css
@@ -17,40 +17,40 @@
 
 .fui-Button {
   &:where(.fui-r-size-1) {
-    gap: var(--space-1);
+    gap: 4px;
     font-size: var(--font-size-1);
     line-height: var(--line-height-1);
     letter-spacing: var(--letter-spacing-1);
 
-    padding-left: var(--space-2);
-    padding-right: var(--space-2);
+    padding-left: 8px;
+    padding-right: 8px;
   }
   &:where(.fui-r-size-2) {
-    gap: var(--space-2);
+    gap: 8px;
     font-size: var(--font-size-2);
     line-height: var(--line-height-2);
     letter-spacing: var(--letter-spacing-2);
 
-    padding-left: var(--space-3);
-    padding-right: var(--space-3);
+    padding-left: 12px;
+    padding-right: 12px;
   }
   &:where(.fui-r-size-3) {
-    gap: var(--space-3);
+    gap: 10px;
     font-size: var(--font-size-3);
     line-height: var(--line-height-3);
     letter-spacing: var(--letter-spacing-3);
 
-    padding-left: var(--space-4);
-    padding-right: var(--space-4);
+    padding-left: 16px;
+    padding-right: 16px;
   }
   &:where(.fui-r-size-4) {
-    gap: var(--space-3);
+    gap: 12px;
     font-size: var(--font-size-4);
     line-height: var(--line-height-4);
     letter-spacing: var(--letter-spacing-4);
 
-    padding-left: var(--space-5);
-    padding-right: var(--space-5);
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
